fix:usr: Fix post list item on small screens

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -966,7 +966,6 @@ ul.asymp>li {
   background-position-x: 0;
   background-size: 100%;
   background-repeat: no-repeat;
-  background-position-y: 50%;
   padding-top: 12em;
   border: 1px solid lightgrey;
 }
